--- a/flota.html
+++ b/flota.html
@@ -55,7 +55,7 @@
 
         <!-- Navbar & Hero Start -->
         <div class="container-fluid nav-bar sticky-top px-0 px-lg-4 py-2 py-lg-0">
-            <nav class="justify-content-around flex-column flex-lg-row align-i tems-start align-items-lg-center navbar navbar-expand-lg navbar-light">
+            <nav class="justify-content-around flex-column flex-lg-row align-items-center navbar navbar-expand-lg navbar-light">
                 <div class="d-flex">
                     <a href="index.html" class="navbar-brand p-0">
                         <img src="img/napis.png" class="img-fluid me-3" alt="Tedicars logo">
@@ -67,8 +67,8 @@
                 <div class="d-flex">
                     <div class="collapse navbar-collapse" id="navbarCollapse">
                         <div class="navbar-nav mx-auto mt-2 py-0">
-                            <a href="index.html" class="nav-item nav-link active">Start</a>
-                            <a href="flota.html" class="nav-item nav-link">Flota</a>
+                            <a href="index.html" class="nav-item nav-link">Start</a>
+                            <a href="flota.html" class="nav-item nav-link active">Flota</a>
                             <a class="nav-item nav-link"><s>Usługi</s></a>
                             <a class="nav-item nav-link"><s>Regulamin</s></a>
                             <a class="nav-item nav-link"><s>O nas</s></a>
@@ -84,13 +84,13 @@
         <div class="container-fluid categories py-5">
             <div class="container py-5">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 800px;">
-                    <h1 class="display-5 text-capitalize mb-3">NASZE <span class="text-primary">POJAZDY</span></h1>
+                    <h1 class="display-5 text-capitalize mb-3">NASZE <span class="text-primary">SAMOCHODY</span></h1>
                 </div>
                 <div class="row">
                     <!-- Car 1 -->
                     <div class="col-xl-4 col-md-6 col-12">
                         <div class="card mb-4 p-2 border-2 border-primary">
-                            <img class="card-img-top" src="img/cars/jag.png" alt="Jaguar F-type R">
+                            <img class="card-img-top" src="img/fleet/jag.png" alt="Jaguar F-type R">
                             <div class="card-body">
                                 <h5 class="card-title fw-bold">Jaguar F-type R</h5>
                                 <div class="row">
@@ -117,7 +117,7 @@
                                 </ul>
                                 <p>Kaucja zwrotna 6000 PLN</p>
                                 <p>5zł / km powyżej limitu</p>
-                                <a><button class="btn btn-primary w-100 mt-2">Szczegóły <i class="fas fa-arrow-right"></i></button></a>
+                                <a href="ftype.html"><button class="btn btn-primary w-100 mt-2">Szczegóły <i class="fas fa-arrow-right"></i></button></a>
                             </div>
                         </div>
                     </div>
@@ -125,7 +125,7 @@
                     <!-- Car 2 -->
                     <div class="col-xl-4 col-md-6 col-12">
                         <div class="card mb-4 p-2 border-2 border-primary">
-                            <img class="card-img-top" src="img/cars/vette.jpg" alt="Corvette C6">
+                            <img class="card-img-top" src="img/fleet/vette.jpg" alt="Corvette C6">
                             <div class="card-body">
                                 <h5 class="card-title fw-bold">Corvette C6</h5>
                                 <div class="row">
@@ -152,7 +152,7 @@
                                 </ul>
                                 <p>Kaucja zwrotna 6000 PLN</p>
                                 <p>5zł / km powyżej limitu</p>
-                                <a><button class="btn btn-primary w-100 mt-2">Szczegóły <i class="fas fa-arrow-right"></i></button></a>
+                                <a><button class="btn btn-primary w-100 mt-2"><s>Szczegóły <i class="fas fa-arrow-right"></i></s></button></a>
                             </div>
                         </div>
                     </div>
@@ -160,7 +160,7 @@
                     <!-- Car 3 -->
                     <div class="col-xl-4 col-md-6 col-12">
                         <div class="card mb-4 p-2 border-2 border-primary">
-                            <img class="card-img-top" src="img/cars/bmw4.jpg" alt="BMW 4 F33 Kabriolet">
+                            <img class="card-img-top" src="img/fleet/bmw4.jpg" alt="BMW 4 F33 Kabriolet">
                             <div class="card-body">
                                 <h5 class="card-title fw-bold">BMW 4 F33 Cabrio / Coupe</h5>
                                 <div class="row">
@@ -187,7 +187,7 @@
                                 </ul>
                                 <p>Kaucja zwrotna 2000 PLN</p>
                                 <p>2zł / km powyżej limitu</p>
-                                <a><button class="btn btn-primary w-100 mt-2">Szczegóły <i class="fas fa-arrow-right"></i></button></a>
+                                <a href="bmw4.html"><button class="btn btn-primary w-100 mt-2">Szczegóły <i class="fas fa-arrow-right"></i></button></a>
                             </div>
                         </div>
                     </div>
@@ -195,7 +195,7 @@
                     <!-- Car 4 -->
                     <div class="col-xl-4 col-md-6 col-12">
                         <div class="card mb-4 p-2 border-2 border-primary">
-                            <img class="card-img-top" src="img/cars/w222_1.jpg" alt="Mercedes Klasa S W222">
+                            <img class="card-img-top" src="img/fleet/w222_1.jpg" alt="Mercedes Klasa S W222">
                             <div class="card-body">
                                 <h5 class="card-title fw-bold">Mercedes Klasa S Long</h5>
                                 <div class="row">
@@ -222,7 +222,7 @@
                                 </ul>
                                 <p>Kaucja zwrotna 3000 PLN</p>
                                 <p>3zł / km powyżej limitu</p>
-                                <a><button class="btn btn-primary w-100 mt-2">Szczegóły <i class="fas fa-arrow-right"></i></button></a>
+                                <a href="w222.html"><button class="btn btn-primary w-100 mt-2">Szczegóły <i class="fas fa-arrow-right"></i></button></a>
                             </div>
                         </div>
                     </div>
@@ -230,7 +230,7 @@
                     <!-- Car 5 -->
                     <div class="col-xl-4 col-md-6 col-12">
                         <div class="card mb-4 p-2 border-2 border-primary">
-                            <img class="card-img-top" src="img/cars/bmw7.jpeg" alt="BMW 7 G11">
+                            <img class="card-img-top" src="img/fleet/bmw7.jpeg" alt="BMW 7 G11">
                             <div class="card-body">
                                 <h5 class="card-title fw-bold">BMW 7 G11</h5>
                                 <div class="row">
@@ -257,7 +257,7 @@
                                 </ul>
                                 <p>Kaucja zwrotna 2000 PLN</p>
                                 <p>2zł / km powyżej limitu</p>
-                                <a><button class="btn btn-primary w-100 mt-2">Szczegóły <i class="fas fa-arrow-right"></i></button></a>
+                                <a href="bmw7.html"><button class="btn btn-primary w-100 mt-2">Szczegóły <i class="fas fa-arrow-right"></i></button></a>
                             </div>
                         </div>
                     </div>
@@ -265,7 +265,7 @@
                     <!-- Car 6 -->
                     <div class="col-xl-4 col-md-6">
                         <div class="card mb-4 p-2 border-2 border-primary">
-                            <img class="card-img-top" src="img/cars/w222_2.jpg" alt="Mercedes Klasa S W222">
+                            <img class="card-img-top" src="img/fleet/w222_2.jpg" alt="Mercedes Klasa S W222">
                             <div class="card-body">
                                 <h5 class="card-title fw-bold">Mercedes Klasa S Long</h5>
                                 <div class="row">
@@ -292,7 +292,7 @@
                                 </ul>
                                 <p>Kaucja zwrotna 3000 PLN</p>
                                 <p>3zł / km powyżej limitu</p>
-                                <a><button class="btn btn-primary w-100 mt-2">Szczegóły <i class="fas fa-arrow-right"></i></button></a>
+                                <a><button class="btn btn-primary w-100 mt-2"><s>Szczegóły <i class="fas fa-arrow-right"></i></s></button></a>
                             </div>
                         </div>
                     </div>
