--- a/ftype.html
+++ b/ftype.html
@@ -11,7 +11,7 @@
         <!-- Google Web Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
         <!-- Icon Font Stylesheet -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
@@ -57,7 +57,7 @@
         <div class="container-fluid nav-bar sticky-top px-0 px-lg-4 py-2 py-lg-0">
             <nav class="justify-content-around flex-column flex-lg-row align-items-center navbar navbar-expand-lg navbar-light">
                 <div class="d-flex">
-                    <a href="" class="navbar-brand p-0">
+                    <a href="index.html" class="navbar-brand p-0">
                         <img src="img/napis.png" class="img-fluid me-3" alt="Tedicars logo">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -67,7 +67,7 @@
                 <div class="d-flex">
                     <div class="collapse navbar-collapse" id="navbarCollapse">
                         <div class="navbar-nav mx-auto mt-2 py-0">
-                            <a href="index.html" class="nav-item nav-link active">Start</a>
+                            <a href="index.html" class="nav-item nav-link">Start</a>
                             <a href="flota.html" class="nav-item nav-link">Flota</a>
                             <a class="nav-item nav-link"><s>Usługi</s></a>
                             <a class="nav-item nav-link"><s>Regulamin</s></a>
@@ -80,85 +80,50 @@
         </div>
         <!-- Navbar & Hero End -->
 
-        <!-- Carousel Start -->
-        <div id="carouselExampleSlidesOnly" class="carousel slide py-5" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="img/index/carousel1.jpeg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="img/index/carousel2.jpeg" class="d-block w-100" alt="...">
-                </div>
-            </div>
-        </div>
-        <!-- Carousel End -->
-
-        <!-- Features Start -->
-        <div class="container-fluid feature py-5">
-            <div class="container py-5">
+        <!-- Car categories Start -->
+        <div class="container-fluid px-3 py-5">
+            <div class="container p-0">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 800px;">
-                    <h1 class="display-5 text-capitalize mb-3">NASZA <span class="text-primary">OFERTA</span></h1>
+                    <h1 class="display-5 text-capitalize mb-3">Jaguar <span class="text-primary">F-type R</span></h1>
                 </div>
-                <div class="row g-4 align-items-center">
-                    <div class="col-xl-4">
-                        <div class="row gy-4 gx-0">
-                            <div class="col-12 wow fadeInUp" data-wow-delay="0.1s">
-                                <div class="feature-item">
-                                    <div class="feature-icon">
-                                        <span class="fa fa-trophy fa-2x" style="color: #1c1c1c"></span>
-                                    </div>
-                                    <div class="ms-4">
-                                        <h5 class="mb-3">Wyjątkowa flota</h5>
-                                        <p class="mb-0">Oferujemy nietuzinkowe samochody, nasza flota wybierana jest pod kątem maksymalnych osiągów oraz wygody</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-12 wow fadeInUp" data-wow-delay="0.1s">
-                                <div class="feature-item">
-                                    <div class="feature-icon">
-                                        <span class="fa fa-tag fa-2x" style="color: #1c1c1c"></span>
-                                    </div>
-                                    <div class="ms-4">
-                                        <h5 class="mb-3">Najwyższa jakość</h5>
-                                        <p class="mb-0">Samochód wydajemy czysty, wyprany, pachnący, zatankowany i w 100% sprawny, gotowy by sprawiać przyjemnośc z jazdy</p>
-                                    </div>
-                                </div>
-                            </div>
+                <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="img/cars/jaguar/test_jaguar.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/cars/jaguar/test_jaguar.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/cars/jaguar/test_jaguar.jpg" class="d-block w-100" alt="...">
                         </div>
                     </div>
-                    <div class="col-lg-12 col-xl-4 d-none d-xl-block wow fadeInUp" data-wow-delay="0.2s">
-                        <img src="img/features-img.png" class="img-fluid w-100" style="object-fit: cover;" alt="Img">
-                    </div>
-                    <div class="col-xl-4">
-                        <div class="row gy-4 gx-0">
-                            <div class="col-12 wow fadeInUp" data-wow-delay="0.3s">
-                                <div class="feature-item justify-content-end">
-                                    <div class="text-end me-4">
-                                        <h5 class="mb-3">Podstawienie i odbiór</h5>
-                                        <p class="mb-0">Dowieziemy i odbierzemy samochód na terenie Polski przy dłuższym najmie</p>
-                                    </div>
-                                    <div class="feature-icon">
-                                        <span class="fa fa-map-pin fa-2x" style="color: #1c1c1c"></span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-12 wow fadeInUp" data-wow-delay="0.3s">
-                                <div class="feature-item justify-content-end">
-                                    <div class="text-end me-4">
-                                        <h5 class="mb-3">Wsparcie 24/7</h5>
-                                        <p class="mb-0">Jesteśmy dostępni pod telefonem by udzielić wszelkiego wsparcia w trakcie trwania najmu</p>
-                                    </div>
-                                    <div class="feature-icon">
-                                        <span class="fa fa-road fa-2x" style="color: #1c1c1c"></span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+                <div>
+                    <p class="pt-3" style="text-align: justify">
+                        Jaguar F-Type R to topowa wersja z potężnym silnikiem 5.0 V8 z kompresorem, generującym imponujące 550 KM,
+                        połączonym z szybką 8-biegową skrzynią Quickshift. Samochód wyróżnia się piękną sportową linią nadwozia
+                        2-osobowego coupe z brytyjskim rodowodem, która przyciąga wzrok na każdym kroku. W naszym egzemplarzu
+                        zewnętrzny tuning podkreśla jego wyjątkowy charakter – zastosowane carbonowe dokładki oraz lotka dodają
+                        agresji i podkreślają sportowy styl. F-Type R to prawdziwy przedstawiciel segmentu supercar, głośny
+                        i niezwykle precyzyjny w prowadzeniu, a jednocześnie zwinny niczym jaguar. Dzięki aktywnemu zawieszeniu
+                        oraz adaptacyjnemu wydechowi może zamienić się w cichego, komfortowego i przytulnego "kotka", w zależności
+                        od nastroju i temperamentu kierowcy. Mimo sportowego charakteru, jest zaskakująco wygodny i z pewnością
+                        dostarczy wiele radości z jazdy. Jego przyspieszenie, nawet powyżej 200 km/h, robi ogromne wrażenie – to
+                        auto, do którego należy mieć respekt.
+                    </p>
                 </div>
             </div>
         </div>
-        <!-- Features End -->
+        <!-- Car categories End -->
 
         <!-- Car Steps Start -->
         <div class="container-fluid steps py-5">
@@ -247,7 +212,7 @@
             </div>
         </div>
         <!-- Footer End -->
-        
+
         <!-- Copyright Start -->
         <div class="container-fluid bg-primary copyright py-4">
             <div class="container">
@@ -260,9 +225,10 @@
         </div>
         <!-- Copyright End -->
 
+
         <!-- Back to Top -->
         <a href="#" class="btn btn-secondary bg-primary btn-lg-square rounded-circle back-to-top" style="border-color: #ac9f6f"><i class="fa fa-arrow-up text-primary"></i></a>
-        
+
         <!-- JavaScript Libraries -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
