--- a/bmw-4-f33.html
+++ b/bmw-4-f33.html
@@ -54,7 +54,7 @@
         <!-- Topbar End -->
 
         <!-- Navbar & Hero Start -->
-        <div class="container-fluid nav-bar sticky-top px-0 px-lg-4 py-2 py-lg-0">
+        <div class="container-fluid nav-bar sticky-top px-2 px-lg-4 py-2 py-lg-0">
             <nav class="justify-content-around flex-column flex-lg-row align-items-center navbar navbar-expand-lg navbar-light">
                 <div class="d-flex">
                     <a href="index.html" class="navbar-brand p-0">
@@ -84,7 +84,7 @@
         <div class="container-fluid px-3 py-5">
             <div class="container p-0">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 800px;">
-                    <h1 class="display-5 text-capitalize mb-3">BMW <span class="text-primary">740xd</span></h1>
+                    <h1 class="display-5 text-capitalize mb-3">BMW <span class="text-primary">428i</span></h1>
                 </div>
                 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
@@ -109,24 +109,16 @@
                 </div>
                 <div>
                     <p class="pt-3" style="text-align: justify">
-                        BMW 740xd to flagowa limuzyna, najwyższy model produkowany przez renomowanego niemieckiego producenta z Dolnej Bawarii.
-                        Ten samochód to prawdziwa definicja luksusu i nowoczesnych technologii, doskonale wyposażony, aby zapewnić komfort oraz
-                        bezpieczeństwo na najwyższym poziomie. Jednym z wyjątkowych atutów tego modelu, rzadko spotykanym nawet w tak prestiżowych
-                        limuzynach, jest ogrzewanie postojowe WEBASTO. Dzięki niemu w chłodne dni możesz zaprogramować samochód, aby sam się ogrzał
-                        na określoną godzinę lub uruchomić system zdalnie za pomocą pilota, co znacząco podnosi komfort użytkowania w zimowe poranki.
-                        Oferowany przez nas model 740xd posiada inteligentny napęd na cztery koła xDrive, który w połączeniu z 8-biegową automatyczną
-                        skrzynią biegów oraz silnikiem o mocy 320 KM i potężnym momencie obrotowym 680 Nm, zapewnia doskonałe osiągi. Samochód
-                        przyspiesza od 0 do 100 km/h w zaledwie 5,3 sekundy, a jego prędkość maksymalna wynosi 260 km/h. To idealne połączenie mocy,
-                        precyzji i pewności prowadzenia, które sprawdza się w każdych warunkach drogowych. Wnętrze BMW 740xd zostało zaprojektowane
-                        z myślą o maksymalnej wygodzie pasażerów – oferuje cztery komfortowe fotele, wszystkie elektrycznie regulowane, z "łamanymi"
-                        oparciami, które pozwalają na idealne dostosowanie pozycji siedzenia. Dodatkowo, samochód posiada czterostrefową klimatyzację,
-                        a także podgrzewane i wentylowane fotele, co sprawia, że podróżowanie w każdą pogodę staje się przyjemnością. Pod względem
-                        technologii bezpieczeństwa, BMW 740xd nie pozostawia nic do życzenia. Wyposażony w zaawansowane systemy wspomagające jazdę,
-                        takie jak system wczesnego ostrzegania o niebezpieczeństwie i wspomagający hamowanie w krytycznych sytuacjach, a także Line
-                        Assistant, który pomaga utrzymać tor jazdy. Samochód czyta i wyświetla znaki drogowe, co dodatkowo zwiększa komfort jazdy,
-                        a Head-Up Display pozwala kierowcy skupić się na drodze, wyświetlając kluczowe informacje na przedniej szybie. Komfort
-                        użytkowania podnosi także bezkluczykowy dostęp Keyless Go, który sprawia, że wsiadanie do pojazdu i jego uruchamianie staje
-                        się jeszcze bardziej wygodne.
+                        BMW 428i to niezwykle wszechstronny samochód, który łączy w sobie elegancję coupe z frajdą z jazdy kabrioletem.
+                        Dzięki twardemu, elektrycznie składanemu dachowi, który jest ocieplony, auto z łatwością zamienia się z atrakcyjnego
+                        kabrioletu w całoroczne, w pełni funkcjonalne coupe. Jazda z otwartym dachem daje ogromną przyjemność nie tylko latem,
+                        ale także w cieplejsze wiosenne czy jesienne dni – nawet gdy słońce nie świeci. Model ten wyróżnia się pięknym białym
+                        lakierem Alpinweiss oraz sportowym M-pakietem zewnętrznym, co czyni go wyjątkowym w swoim segmencie. Dodatkowo,
+                        reflektory full LED sprawiają, że wyglądem nawiązuje do topowej wersji M4, co dodaje mu ekskluzywności i agresywnego
+                        charakteru. Pod maską BMW 428i kryje się silnik o mocy 245 KM, który w połączeniu z 8-biegową automatyczną skrzynią
+                        biegów pozwala osiągnąć 100 km/h w zaledwie 6,5 sekundy, zachowując przy tym ekonomiczność. Auto daje wiele radości
+                        z jazdy, dzięki czemu łatwo się w nim zakochać. To idealny wybór dla tych, którzy cenią sobie sportowe wrażenia, ale
+                        także komfort i elegancję na co dzień.
                     </p>
                 </div>
             </div>
