--- a/flota.html
+++ b/flota.html
@@ -54,7 +54,7 @@
         <!-- Topbar End -->
 
         <!-- Navbar & Hero Start -->
-        <div class="container-fluid nav-bar sticky-top px-0 px-lg-4 py-2 py-lg-0">
+        <div class="container-fluid nav-bar sticky-top px-2 px-lg-4 py-2 py-lg-0">
             <nav class="justify-content-around flex-column flex-lg-row align-items-center navbar navbar-expand-lg navbar-light">
                 <div class="d-flex">
                     <a href="index.html" class="navbar-brand p-0">
@@ -117,7 +117,7 @@
                                 </ul>
                                 <p>Kaucja zwrotna 6000 PLN</p>
                                 <p>5zł / km powyżej limitu</p>
-                                <a href="ftype.html"><button class="btn btn-primary w-100 mt-2">Szczegóły <i class="fas fa-arrow-right"></i></button></a>
+                                <a href="jaguar-f-type-r.html"><button class="btn btn-primary w-100 mt-2">Szczegóły <i class="fas fa-arrow-right"></i></button></a>
                             </div>
                         </div>
                     </div>
@@ -187,7 +187,7 @@
                                 </ul>
                                 <p>Kaucja zwrotna 2000 PLN</p>
                                 <p>2zł / km powyżej limitu</p>
-                                <a href="bmw4.html"><button class="btn btn-primary w-100 mt-2">Szczegóły <i class="fas fa-arrow-right"></i></button></a>
+                                <a href="bmw-4-f33.html"><button class="btn btn-primary w-100 mt-2">Szczegóły <i class="fas fa-arrow-right"></i></button></a>
                             </div>
                         </div>
                     </div>
@@ -222,7 +222,7 @@
                                 </ul>
                                 <p>Kaucja zwrotna 3000 PLN</p>
                                 <p>3zł / km powyżej limitu</p>
-                                <a href="w222.html"><button class="btn btn-primary w-100 mt-2">Szczegóły <i class="fas fa-arrow-right"></i></button></a>
+                                <a href="mercedes-s-w222.html"><button class="btn btn-primary w-100 mt-2">Szczegóły <i class="fas fa-arrow-right"></i></button></a>
                             </div>
                         </div>
                     </div>
@@ -257,7 +257,7 @@
                                 </ul>
                                 <p>Kaucja zwrotna 2000 PLN</p>
                                 <p>2zł / km powyżej limitu</p>
-                                <a href="bmw7.html"><button class="btn btn-primary w-100 mt-2">Szczegóły <i class="fas fa-arrow-right"></i></button></a>
+                                <a href="bmw-7-g11.html"><button class="btn btn-primary w-100 mt-2">Szczegóły <i class="fas fa-arrow-right"></i></button></a>
                             </div>
                         </div>
                     </div>
