--- a/index.html
+++ b/index.html
@@ -30,33 +30,35 @@
 
     <body>
 
-        <!-- Topbar Start -->
-        <div class="container-fluid d-block w-100 bg-primary">
-            <div class="container">
-                <div class="row gx-0 align-items-center">
-                    <div class="col-10 text-center text-lg-start mb-lg-0">
-                        <div class="d-flex flex-column flex-md-row align-items-start ">
-                            <a href="#" class="text-light me-4"><i class="fas fa-map-marker-alt text-primary me-2"></i>Zielona Góra, Lubuskie</a>
-                            <a href="tel:+48790466322" class="text-light me-4"><i class="fas fa-phone-alt text-primary me-2"></i>+48 790 466 322</a>
-                            <a href="mailto:tadeusz@tedicars.pl" class="text-light me-0"><i class="fas fa-envelope text-primary me-2"></i>tadeusz@tedicars.pl</a>
+        <!-- Navbar & Hero Start -->
+        <div class="container-fluid nav-bar sticky-top p-0">
+            <div class="container-fluid d-block w-100 bg-primary">
+                <div class="container">
+                    <div class="row gx-0 align-items-center">
+                        <div class="col-10 text-center text-lg-start mb-lg-0">
+                            <div class="d-flex flex-column flex-md-row align-items-start ">
+                                <a href="#" class="text-light me-4"><i class="fas fa-map-marker-alt text-primary me-2"></i>Zielona Góra, Lubuskie</a>
+                                <a href="tel:+48790466322" class="text-light me-4"><i class="fas fa-phone-alt text-primary me-2"></i>+48 790 466 322</a>
+                                <a href="mailto:tadeusz@tedicars.pl" class="text-light me-0"><i class="fas fa-envelope text-primary me-2"></i>tadeusz@tedicars.pl</a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-2 text-center text-lg-end">
-                        <div class="d-flex justify-content-end align-items-center">
-                            <a href="https://www.facebook.com/tedicars/" target="_blank" class="btn text-primary btn-sm-square rounded-circle me-3"><i class="fab fa-facebook-f"></i></a>
-                            <a href="https://www.instagram.com/tedicars.pl/" target="_blank" class="btn text-primary btn-sm-square rounded-circle me-3"><i class="fab fa-instagram"></i></a>
-                            <a href="#" target="_blank" class="btn text-primary btn-sm-square rounded-circle me-0"><i class="fab fa-tiktok"></i></a>
+                        <div class="col-2 text-center text-lg-end">
+                            <div class="d-flex justify-content-end align-items-center">
+                                <a href="https://www.facebook.com/tedicars/" target="_blank" class="btn text-primary btn-sm-square rounded-circle me-3"><i class="fab fa-facebook-f"></i></a>
+                                <a href="https://www.instagram.com/tedicars.pl/" target="_blank" class="btn text-primary btn-sm-square rounded-circle me-3"><i class="fab fa-instagram"></i></a>
+                                <a href="#" target="_blank" class="btn text-primary btn-sm-square rounded-circle me-0"><i class="fab fa-tiktok"></i></a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- Topbar End -->
-
-        <!-- Navbar & Hero Start -->
-        <div class="container-fluid nav-bar sticky-top px-0 px-lg-4 py-2 py-lg-0">
-            <nav class="justify-content-around flex-column flex-lg-row align-items-center navbar navbar-expand-lg navbar-light">
-                <div class="d-flex">
+            <nav class="
+            navbar navbar-expand-lg navbar-light
+            flex-column flex-lg-row
+            justify-content-lg-around align-items-lg-center align-items-stretch
+            p-2 px-lg-4 py-lg-0"
+            >
+                <div class="d-flex justify-content-between justify-content-lg-around">
                     <a href="" class="navbar-brand p-0">
                         <img src="img/napis.png" class="img-fluid me-3" alt="Tedicars logo">
                     </a>
@@ -64,7 +66,7 @@
                         <span class="fa fa-bars"></span>
                     </button>
                 </div>
-                <div class="d-flex">
+                <div class="d-flex ps-3 ps-lg-0">
                     <div class="collapse navbar-collapse" id="navbarCollapse">
                         <div class="navbar-nav mx-auto mt-2 py-0">
                             <a href="index.html" class="nav-item nav-link active">Start</a>
