navbar and footer refactoring

--- a/bmw-7-g11.html
+++ b/bmw-7-g11.html
@@ -29,44 +29,49 @@
     </head>
 
     <body>
-
-        <!-- Topbar Start -->
-        <div class="container-fluid d-block w-100 bg-primary">
-            <div class="container">
-                <div class="row gx-0 align-items-center">
-                    <div class="col-10 text-center text-lg-start mb-lg-0">
-                        <div class="d-flex flex-column flex-md-row align-items-start ">
-                            <a href="#" class="text-light me-4"><i class="fas fa-map-marker-alt text-primary me-2"></i>Zielona Góra, Lubuskie</a>
-                            <a href="tel:+48790466322" class="text-light me-4"><i class="fas fa-phone-alt text-primary me-2"></i>+48 790 466 322</a>
-                            <a href="mailto:tadeusz@tedicars.pl" class="text-light me-0"><i class="fas fa-envelope text-primary me-2"></i>tadeusz@tedicars.pl</a>
-                        </div>
-                    </div>
-                    <div class="col-2 text-center text-lg-end">
-                        <div class="d-flex justify-content-end align-items-center">
-                            <a href="https://www.facebook.com/tedicars/" target="_blank" class="btn text-primary btn-sm-square rounded-circle me-3"><i class="fab fa-facebook-f"></i></a>
-                            <a href="https://www.instagram.com/tedicars.pl/" target="_blank" class="btn text-primary btn-sm-square rounded-circle me-3"><i class="fab fa-instagram"></i></a>
-                            <a href="#" target="_blank" class="btn text-primary btn-sm-square rounded-circle me-0"><i class="fab fa-tiktok"></i></a>
-                        </div>
-                    </div>
+        <!-- Navbar -->
+        <div class="container-fluid nav-bar sticky-top p-0">
+            <!-- Contact and social media links -->
+            <div class="d-flex justify-content-between align-items-center px-3 w-100 bg-primary">
+                <div class="d-flex flex-column flex-md-row">
+                    <a href="#" class="text-light me-1 me-md-4">
+                        <i class="fas fa-map-marker-alt text-primary me-2"></i>
+                        Zielona Góra, Lubuskie
+                    </a>
+                    <a href="tel:+48790466322" class="text-light me-1 me-md-4">
+                        <i class="fas fa-phone-alt text-primary me-2"></i>
+                        +48 790 466 322
+                    </a>
+                    <a href="mailto:tadeusz@tedicars.pl" class="text-light me-0">
+                        <i class="fas fa-envelope text-primary me-2"></i>
+                        tadeusz@tedicars.pl
+                    </a>
+                </div>
+                <div class="d-flex">
+                    <a href="https://www.facebook.com/tedicars/" target="_blank" class="btn text-primary btn-sm-square rounded-circle me-0">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="https://www.instagram.com/tedicars.pl/" target="_blank" class="btn text-primary btn-sm-square rounded-circle me-0">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="#" target="_blank" class="btn text-primary btn-sm-square rounded-circle me-0">
+                        <i class="fab fa-tiktok"></i>
+                    </a>
                 </div>
             </div>
-        </div>
-        <!-- Topbar End -->
-
-        <!-- Navbar & Hero Start -->
-        <div class="container-fluid nav-bar sticky-top px-2 px-lg-4 py-2 py-lg-0">
-            <nav class="justify-content-around flex-column flex-lg-row align-items-center navbar navbar-expand-lg navbar-light">
-                <div class="d-flex">
-                    <a href="index.html" class="navbar-brand p-0">
-                        <img src="img/napis.png" class="img-fluid me-3" alt="Tedicars logo">
+            <!-- Navigation -->
+            <nav class="navbar navbar-expand-lg navbar-light flex-column flex-lg-row justify-content-between align-items-stretch align-items-lg-center px-3 py-2">
+                <div class="d-flex justify-content-between justify-content-lg-around">
+                    <a href="" class="navbar-brand">
+                        <img src="img/napis.png" class="img-fluid" alt="Tedicars logo">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="fa fa-bars"></span>
                     </button>
                 </div>
-                <div class="d-flex">
+                <div class="d-flex ps-3 ps-lg-0">
                     <div class="collapse navbar-collapse" id="navbarCollapse">
-                        <div class="navbar-nav mx-auto mt-2 py-0">
+                        <div class="navbar-nav">
                             <a href="index.html" class="nav-item nav-link">Start</a>
                             <a href="flota.html" class="nav-item nav-link">Flota</a>
                             <a class="nav-item nav-link"><s>Usługi</s></a>
@@ -78,9 +83,8 @@
                 </div>
             </nav>
         </div>
-        <!-- Navbar & Hero End -->
 
-        <!-- Car categories Start -->
+        <!-- Car categories -->
         <div class="container-fluid px-3 py-5">
             <div class="container p-0">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 800px;">
@@ -131,9 +135,8 @@
                 </div>
             </div>
         </div>
-        <!-- Car categories End -->
 
-        <!-- Car Steps Start -->
+        <!-- Car Steps -->
         <div class="container-fluid steps py-5">
             <div class="container py-5">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 800px;">
@@ -164,24 +167,21 @@
                 </div>
             </div>
         </div>
-        <!-- Car Steps End -->
 
-        <!-- Footer Start -->
-        <div class="container-fluid footer py-5 bg-primary">
-            <div class="container py-5">
+        <!-- Footer -->
+        <div class="container-fluid footer bg-primary">
+            <div class="container pb-3">
                 <div class="row g-5">
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
-                            <div class="footer-item">
-                                <h4 class="text-primary mb-4">O firmie</h4>
-                                <p class="mb-3">
-                                    Tedicars Marta Krzesaj<br>
-                                    NIP 9291580709<br>
-                                    REGON 080052701<br>
-                                    ul. Fabryczna 17E/5<br>
-                                    65-001 Zielona Góra<br>
-                                </p>
-                            </div>
+                            <h4 class="text-primary mb-4">O firmie</h4>
+                            <p class="mb-3">
+                                Tedicars Marta Krzesaj<br>
+                                NIP 9291580709<br>
+                                REGON 080052701<br>
+                                ul. Fabryczna 17E/5<br>
+                                65-001 Zielona Góra<br>
+                            </p>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
@@ -197,10 +197,8 @@
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="text-primary mb-4">Godziny otwarcia</h4>
-                            <div class="mb-3">
-                                <h6 class="text-muted mb-0">Poniedziałek - Niedziela</h6>
-                                <p class="text-muted mb-0">8:00 - 23:00</p>
-                            </div>
+                            <p class="text-muted mb-0">Poniedziałek - Niedziela</p>
+                            <p class="text-muted mb-0">8:00 - 23:00</p>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
@@ -209,7 +207,7 @@
                             <a href="#"><i class="fa fa-map-marker-alt text-primary me-2"></i> Zielona Góra, Lubuskie</a>
                             <a href="mailto:info@example.com"><i class="fas fa-envelope text-primary me-2"></i> tadeusz@tedicars.pl</a>
                             <a href="tel:+012 345 67890"><i class="fas fa-phone text-primary me-2"></i> +48 790 466 322</a>
-                            <div class="d-flex justify-content-start mt-1">
+                            <div class="d-flex justify-content-start">
                                 <a class="btn btn-md-square rounded-circle" href="https://www.facebook.com/tedicars/" target="_blank"><i class="fab fa-facebook-f text-primary"></i></a>
                                 <a class="btn btn-md-square rounded-circle" href="https://www.instagram.com/tedicars.pl/" target="_blank"><i class="fab fa-instagram text-primary"></i></a>
                                 <a class="btn btn-md-square rounded-circle" href="" target="_blank"><i class="fab fa-tiktok text-primary"></i></a>
@@ -219,22 +217,19 @@
                 </div>
             </div>
         </div>
-        <!-- Footer End -->
 
-        <!-- Copyright Start -->
-        <div class="container-fluid bg-primary copyright py-4">
-            <div class="container">
-                <div class="row g-4 align-items-center">
-                    <div class="col-md-6 text-center text-md-start mb-md-0">
-                        <span class="text-body"><a href="#" class="text-primary me-1"><i class="fas fa-copyright text-primary me-1"></i>TEDICARS</a> Wszystkie prawa zastrzeżone</span>
-                    </div>
-                </div>
-            </div>
+        <!-- Copyright -->
+        <div class="container-fluid copyright d-flex justify-content-center align-items-center bg-primary p-3">
+            <span class="text-center text-body">
+                <a href="#" class="text-primary me-1">
+                    <i class="fas fa-copyright text-primary me-1"></i>
+                    TEDICARS
+                </a>
+                Wszystkie prawa zastrzeżone
+            </span>
         </div>
-        <!-- Copyright End -->
 
-
-        <!-- Back to Top -->
+        <!-- Back to top -->
         <a href="#" class="btn btn-secondary bg-primary btn-lg-square rounded-circle back-to-top" style="border-color: #ac9f6f"><i class="fa fa-arrow-up text-primary"></i></a>
 
         <!-- JavaScript Libraries -->
