--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </head>
 
     <body>
-        <!-- Navbar Start -->
+        <!-- Navbar -->
         <div class="container-fluid nav-bar sticky-top p-0">
             <!-- Contact and social media links -->
             <div class="d-flex justify-content-between align-items-center px-3 w-100 bg-primary">
@@ -83,9 +83,8 @@
                 </div>
             </nav>
         </div>
-        <!-- Navbar End -->
 
-        <!-- Carousel Start -->
+        <!-- Carousel -->
         <div id="carouselExampleSlidesOnly" class="carousel slide py-5" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -96,9 +95,8 @@
                 </div>
             </div>
         </div>
-        <!-- Carousel End -->
 
-        <!-- Features Start -->
+        <!-- Features -->
         <div class="container-fluid feature py-5">
             <div class="container py-5">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 800px;">
@@ -163,9 +161,8 @@
                 </div>
             </div>
         </div>
-        <!-- Features End -->
 
-        <!-- Car Steps Start -->
+        <!-- Car Steps -->
         <div class="container-fluid steps py-5">
             <div class="container py-5">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 800px;">
@@ -196,24 +193,21 @@
                 </div>
             </div>
         </div>
-        <!-- Car Steps End -->
 
-        <!-- Footer Start -->
-        <div class="container-fluid footer py-5 bg-primary">
-            <div class="container py-5">
+        <!-- Footer -->
+        <div class="container-fluid footer bg-primary">
+            <div class="container pb-3">
                 <div class="row g-5">
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
-                            <div class="footer-item">
-                                <h4 class="text-primary mb-4">O firmie</h4>
-                                <p class="mb-3">
-                                    Tedicars Marta Krzesaj<br>
-                                    NIP 9291580709<br>
-                                    REGON 080052701<br>
-                                    ul. Fabryczna 17E/5<br>
-                                    65-001 Zielona Góra<br>
-                                </p>
-                            </div>
+                            <h4 class="text-primary mb-4">O firmie</h4>
+                            <p class="mb-3">
+                                Tedicars Marta Krzesaj<br>
+                                NIP 9291580709<br>
+                                REGON 080052701<br>
+                                ul. Fabryczna 17E/5<br>
+                                65-001 Zielona Góra<br>
+                            </p>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
@@ -229,10 +223,8 @@
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="text-primary mb-4">Godziny otwarcia</h4>
-                            <div class="mb-3">
-                                <h6 class="text-muted mb-0">Poniedziałek - Niedziela</h6>
-                                <p class="text-muted mb-0">8:00 - 23:00</p>
-                            </div>
+                            <p class="text-muted mb-0">Poniedziałek - Niedziela</p>
+                            <p class="text-muted mb-0">8:00 - 23:00</p>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
@@ -241,7 +233,7 @@
                             <a href="#"><i class="fa fa-map-marker-alt text-primary me-2"></i> Zielona Góra, Lubuskie</a>
                             <a href="mailto:info@example.com"><i class="fas fa-envelope text-primary me-2"></i> tadeusz@tedicars.pl</a>
                             <a href="tel:+012 345 67890"><i class="fas fa-phone text-primary me-2"></i> +48 790 466 322</a>
-                            <div class="d-flex justify-content-start mt-1">
+                            <div class="d-flex justify-content-start">
                                 <a class="btn btn-md-square rounded-circle" href="https://www.facebook.com/tedicars/" target="_blank"><i class="fab fa-facebook-f text-primary"></i></a>
                                 <a class="btn btn-md-square rounded-circle" href="https://www.instagram.com/tedicars.pl/" target="_blank"><i class="fab fa-instagram text-primary"></i></a>
                                 <a class="btn btn-md-square rounded-circle" href="" target="_blank"><i class="fab fa-tiktok text-primary"></i></a>
@@ -251,21 +243,19 @@
                 </div>
             </div>
         </div>
-        <!-- Footer End -->
         
-        <!-- Copyright Start -->
-        <div class="container-fluid bg-primary copyright py-4">
-            <div class="container">
-                <div class="row g-4 align-items-center">
-                    <div class="col-md-6 text-center text-md-start mb-md-0">
-                        <span class="text-body"><a href="#" class="text-primary me-1"><i class="fas fa-copyright text-primary me-1"></i>TEDICARS</a> Wszystkie prawa zastrzeżone</span>
-                    </div>
-                </div>
-            </div>
+        <!-- Copyright -->
+        <div class="container-fluid copyright d-flex justify-content-center align-items-center bg-primary p-3">
+            <span class="text-center text-body">
+                <a href="#" class="text-primary me-1">
+                    <i class="fas fa-copyright text-primary me-1"></i>
+                    TEDICARS
+                </a>
+                Wszystkie prawa zastrzeżone
+            </span>
         </div>
-        <!-- Copyright End -->
 
-        <!-- Back to Top -->
+        <!-- Back to top -->
         <a href="#" class="btn btn-secondary bg-primary btn-lg-square rounded-circle back-to-top" style="border-color: #ac9f6f">
             <i class="fa fa-arrow-up text-primary"></i>
         </a>
